tab color change on click

--- a/UIRouter/partials/filter.html
+++ b/UIRouter/partials/filter.html
@@ -29,7 +29,7 @@
 					      		<a  type="button" class="list-group-item " ng-click="$ctrl.comp([],'All','')">All</a>
 					      	</div>
 					      	<div class="list-group mag" ng-repeat="phone in $ctrl.phones | unique:'company' ">
-								  <a type="button" class="list-group-item " ng-click="$ctrl.comp(phone,phone.company,phone.id)" >{{phone.company}}</a>
+								  <a type="button" class="list-group-item " ng-click="$ctrl.comp(phone,phone.company,phone.id,$index)" ng-class = "{true:'activeButton'}[activeBtn == $index]" >{{phone.company}}</a>
 							</div>
 					      </div>
 					    </div>
@@ -45,7 +45,7 @@
 					    <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
 					      <div class="panel-body pad mag">
 					      	<div class="list-group mag" style="padding-top:0px;" ng-repeat="phone in $ctrl.phoneList | filter: search">
-								  <a  ng-click="addToCart(phone.company,phone)"  class="list-group-item">{{phone.name}}</a>
+								  <a type="button"  ng-click="addToCart(phone.company,phone,$index)" class="list-group-item" ng-class="{true:'activeButton1'}[activeBtn1 == $index]" >{{phone.name}}</a>
 								</div>
 					      </div>
 					    </div>
